test/libyul/yulSyntaxTests/objects/data_first.yul
object "A" {
  data "B" ""
  code {}
}
// ----
// ParserError 4846: (15-19): Expected keyword "code".
